初期値の変更

--- a/main.ipynb
+++ b/main.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "b8ab26e6",
    "metadata": {},
    "outputs": [
@@ -50,57 +50,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seed_0000:   849443\n",
-      "Seed_0001:   945018\n",
-      "Seed_0002:  1204060\n",
-      "Seed_0003:   946632\n",
-      "Seed_0004:  2931933\n",
-      "Seed_0005:  1097301\n",
-      "Seed_0006:  1228794\n",
-      "Seed_0007:  3492026\n",
-      "Seed_0008:  2426066\n",
-      "Seed_0009:  1279171\n",
-      "Seed_0010:  2357271\n",
-      "Seed_0011:   653662\n",
-      "Seed_0012:  1159622\n",
-      "Seed_0013:  1793631\n",
-      "Seed_0014:   437897\n",
-      "Seed_0015:  2928776\n",
-      "Seed_0016:  1973622\n",
-      "Seed_0017:   439984\n",
-      "Seed_0018:  1144997\n",
-      "Seed_0019:  1880579\n",
-      "Seed_0020:  1516011\n",
-      "Seed_0021:  1675832\n",
-      "Seed_0022:  2033141\n",
-      "Seed_0023:  2717569\n",
-      "Seed_0024:  1096629\n",
-      "Seed_0025:  1451107\n",
-      "Seed_0026:   -63561\n",
-      "Seed_0027:  1414124\n",
-      "Seed_0028:  2459462\n",
-      "Seed_0029:  1901804\n",
-      "Seed_0030:  2487680\n",
-      "Seed_0031:  2150005\n",
-      "Seed_0032:  1990151\n",
-      "Seed_0033:   -44988\n",
-      "Seed_0034:  2709627\n",
-      "Seed_0035:   977691\n",
-      "Seed_0036:  1902810\n",
-      "Seed_0037:   721197\n",
-      "Seed_0038:   149919\n",
-      "Seed_0039:  2736284\n",
-      "Seed_0040:   977992\n",
-      "Seed_0041:  1361441\n",
-      "Seed_0042:  2814705\n",
-      "Seed_0043:   733448\n",
-      "Seed_0044:  1330876\n",
-      "Seed_0045:  3056768\n",
-      "Seed_0046:  2272762\n",
-      "Seed_0047:  2152777\n",
-      "Seed_0048:   386489\n",
-      "Seed_0049:  1091506\n",
-      "Score: 79331743\n"
+      "Seed_0000:  1221581\n",
+      "Seed_0001:  1341814\n",
+      "Seed_0002:  1512396\n",
+      "Seed_0003:  1398607\n",
+      "Seed_0004:  3225264\n",
+      "Seed_0005:  1544157\n",
+      "Seed_0006:  1400940\n",
+      "Seed_0007:  3687363\n",
+      "Seed_0008:  2730601\n",
+      "Seed_0009:  1377466\n",
+      "Seed_0010:  2516995\n",
+      "Seed_0011:  1164426\n",
+      "Seed_0012:  1437356\n",
+      "Seed_0013:  2193125\n",
+      "Seed_0014:   719676\n",
+      "Seed_0015:  3085356\n",
+      "Seed_0016:  2246781\n",
+      "Seed_0017:   775054\n",
+      "Seed_0018:  1582141\n",
+      "Seed_0019:  2183541\n",
+      "Seed_0020:  1866997\n",
+      "Seed_0021:  1959352\n",
+      "Seed_0022:  2334682\n",
+      "Seed_0023:  2937536\n",
+      "Seed_0024:  1369177\n",
+      "Seed_0025:  1761101\n",
+      "Seed_0026:   154331\n",
+      "Seed_0027:  1855772\n",
+      "Seed_0028:  2722344\n",
+      "Seed_0029:  2236320\n",
+      "Seed_0030:  2834502\n",
+      "Seed_0031:  2612276\n",
+      "Seed_0032:  2339702\n",
+      "Seed_0033:   460466\n",
+      "Seed_0034:  2890017\n",
+      "Seed_0035:  1348370\n",
+      "Seed_0036:  2160235\n",
+      "Seed_0037:  1069901\n",
+      "Seed_0038:   475928\n",
+      "Seed_0039:  2964454\n",
+      "Seed_0040:  1087271\n",
+      "Seed_0041:  1670080\n",
+      "Seed_0042:  2940512\n",
+      "Seed_0043:  1115532\n",
+      "Seed_0044:  1737420\n",
+      "Seed_0045:  3422101\n",
+      "Seed_0046:  2453408\n",
+      "Seed_0047:  2389135\n",
+      "Seed_0048:   874715\n",
+      "Seed_0049:  1369854\n",
+      "Score: 94758131\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "128afd94",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "38378dee",
    "metadata": {},
    "outputs": [
@@ -141,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "satisfaction: -458054\r\n",
-      "score: 541946\r\n"
+      "satisfaction: 221581\r\n",
+      "score: 1221581\r\n"
      ]
     }
    ],
